Style header section

--- a/src/main.css
+++ b/src/main.css
@@ -31,3 +31,31 @@ body {
   font-weight: 400;
   font-style: normal;
 }
+
+.header {
+  padding: 2rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  .logo {
+    font-size: 2rem;
+    font-weight: 700;
+  }
+
+  .menu > ul {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+
+    li > a {
+      font-weight: 500;
+      color: var(--color-muted);
+      transition: color 0.3s ease;
+
+      &:hover {
+        color: var(--color-text);
+      }
+    }
+  }
+}
