Add welcome section HTML and BEM styles

--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -4,12 +4,12 @@
   justify-content: space-between;
   align-items: center;
 
-  .logo {
+  &__logo {
     font-size: 2rem;
     font-weight: 700;
   }
 
-  .menu {
+  &__menu {
     > ul {
       display: flex;
       align-items: center;
