--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -12,10 +12,17 @@ body {
   font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
+  letter-spacing: 0.03em;
 }
 
 button {
   cursor: pointer;
+}
+
+.container {
+  max-width: 1650px;
+  width: 100%;
+  margin: 0 auto;
 }
 
 @import 'ui';
