--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -13,6 +13,9 @@ body {
   font-weight: 400;
   font-style: normal;
   letter-spacing: 0.03em;
+
+  overflow-x: hidden;
+  user-select: none;
 }
 
 button {
@@ -28,3 +31,4 @@ button {
 @import 'ui';
 @import 'header';
 @import 'welcome';
+@import 'mission';
