--- a/src/styles/_welcome.scss
+++ b/src/styles/_welcome.scss
@@ -6,30 +6,17 @@
   min-height: 60vh;
 
   &__information {
-    width: 40%;
-    margin: auto;
-    text-align: center;
     position: relative;
     z-index: 1;
-  }
-
-  &__sub-text {
-    opacity: 0.7;
-    text-transform: uppercase;
-    font-size: 1.1rem;
-    font-weight: 500;
+    text-align: center;
   }
 
   &__title {
+    display: flex;
+    flex-direction: column;
     font-size: 7rem;
     font-weight: 600;
     line-height: 1;
-  }
-
-  &__description {
-    margin: 1.4rem 0 1.7rem;
-    font-size: 1.1rem;
-    font-weight: 500;
   }
 
   &__cta {
@@ -47,7 +34,6 @@
     height: auto;
     margin-top: 0;
     z-index: 1;
-    pointer-events: none;
   }
 
   &__bg-clouds {
@@ -60,7 +46,6 @@
 
     > img {
       position: absolute;
-      pointer-events: none;
 
       &:nth-child(1) {
         top: -15rem;
