--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -22,6 +22,10 @@ button {
   cursor: pointer;
 }
 
+img {
+  pointer-events: none;
+}
+
 .container {
   max-width: 1650px;
   width: 100%;
@@ -32,3 +36,4 @@ button {
 @import 'header';
 @import 'welcome';
 @import 'mission';
+@import 'section_ui';
