--- a/src/styles/_section_ui.scss
+++ b/src/styles/_section_ui.scss
@@ -3,9 +3,33 @@ section {
   padding: 12rem 0;
 }
 
+.section-title {
+  font-size: 9.5rem;
+  font-weight: 800;
+  line-height: 1;
+
+  > div {
+    font-weight: 400;
+    font-size: 6rem;
+  }
+}
+
 .section__description {
   width: 54%;
   margin: 1.7rem 0;
+  text-wrap: balance;
+}
+
+.section-bottom-title {
+  font-weight: 500;
+  font-size: 2.5rem;
+}
+
+.section-bottom-description {
+  margin: 1.2rem 0 1.7rem;
+  font-size: 1.2rem;
+  font-weight: 400;
+  width: 40%;
 }
 
 .luxury-flights__image {
