Add apply section

--- a/src/styles/_ui.scss
+++ b/src/styles/_ui.scss
@@ -21,9 +21,19 @@
   }
 
   &--gray {
-    background-color: #dcdde3;
+    background-color: $color-gray;
     color: #32323a;
     box-shadow: none;
+  }
+
+  &--premium {
+    background: linear-gradient(to top, #3a292b, #37292a);
+    border: 1px solid rgba(255, 255, 255, 0.1);
+    transition: border-color 0.4s ease;
+
+    &:hover {
+      border-color: rgba(255, 255, 255, 0.2);
+    }
   }
 }
 
