--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -23,6 +23,7 @@ $font-family: 'Manrope', sans-serif;
 $color-bg: var(--color-bg);
 $color-block: var(--color-block);
 $color-text: var(--color-text);
+$color-gray: #e9e9e9;
 $color-muted: var(--color-muted);
 
 $color-accent: var(--color-accent);
