--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,4 +1,14 @@
-@import 'variables';
+@use 'variables' as *;
+
+@use 'ui' as *;
+@use 'header' as *;
+@use 'welcome' as *;
+@use 'mission' as *;
+@use 'section_ui' as *;
+@use 'loyalty' as *;
+@use 'costs' as *;
+@use 'apply' as *;
+@use 'faq' as *;
 
 html {
   font-size: 18px;
@@ -11,12 +21,15 @@ html {
 body {
   background-color: $color-bg;
   color: $color-text;
-
   font-family: $font-family;
   font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
   letter-spacing: 0.03em;
+  line-height: 1.5;
+  text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%;
+  -webkit-font-smoothing: antialiased;
 
   overflow-x: hidden;
   max-width: 2560px;
@@ -38,13 +51,3 @@ img {
   width: 100%;
   margin: 0 auto;
 }
-
-@import 'ui';
-@import 'header';
-@import 'welcome';
-@import 'mission';
-@import 'section_ui';
-@import 'loyalty';
-@import 'costs';
-@import 'apply';
-@import 'faq';
