--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -51,3 +51,10 @@ img {
   width: 100%;
   margin: 0 auto;
 }
+
+.will-change-transform,
+.fade-in,
+.zoom-in-fade-in,
+.right-fade-in {
+  will-change: transform;
+}
