--- a/src/styles/_faq.scss
+++ b/src/styles/_faq.scss
@@ -1,5 +1,10 @@
 .faq {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
   &__container {
+    width: 920px;
     max-width: 920px;
   }
 
