--- a/src/styles/_mission.scss
+++ b/src/styles/_mission.scss
@@ -5,12 +5,13 @@
   margin: 13rem auto 0;
 
   > div {
-    margin: 0.8rem auto;
+    margin: 1.3rem auto;
     opacity: 0.6;
-    font-size: 2.8rem;
-    font-weight: 700;
+    font-size: 2.6rem;
+    font-weight: 800;
     text-align: center;
-    line-height: 1.3;
+    line-height: 1.2;
+    letter-spacing: 0.01rem;
 
     &:first-child {
       opacity: 1;
