--- a/src/styles/_welcome.scss
+++ b/src/styles/_welcome.scss
@@ -29,11 +29,12 @@
 
   &__plane {
     position: absolute;
-    bottom: -18rem;
+    bottom: -19rem;
     max-width: 65%;
     height: auto;
     margin-top: 0;
     z-index: 1;
+    margin-left: -88px;
   }
 
   &__bg-clouds {
