--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,6 +4,7 @@
 @use 'header' as *;
 @use 'welcome' as *;
 @use 'mission' as *;
+@use 'luxury' as *;
 @use 'section_ui' as *;
 @use 'loyalty' as *;
 @use 'costs' as *;
