--- a/src/styles/_mission.scss
+++ b/src/styles/_mission.scss
@@ -4,6 +4,20 @@
   width: 28%;
   margin: 13rem auto 0;
 
+  @media (max-width: 1400px) {
+    width: 40%;
+  }
+
+  @media (max-width: 768px) {
+    margin-top: 10rem;
+    width: 70%;
+  }
+
+  @media (max-width: 480px) {
+    margin-top: 7rem;
+    width: 80%;
+  }
+
   > div {
     margin: 1.3rem auto;
     opacity: 0.6;
@@ -12,6 +26,15 @@
     text-align: center;
     line-height: 1.2;
     letter-spacing: 0.01rem;
+
+    @media (max-width: 1200px) {
+      font-size: 2rem;
+      margin: 1rem auto;
+    }
+
+    @media (max-width: 480px) {
+      font-size: 1.7rem;
+    }
 
     &:first-child {
       opacity: 1;
