--- a/src/styles/_costs.scss
+++ b/src/styles/_costs.scss
@@ -9,6 +9,18 @@
       text-align: center;
       color: #56565a;
       letter-spacing: 0.05em;
+
+      @media (max-width: 1200px) {
+        font-size: 2rem;
+      }
+
+      @media (max-width: 768px) {
+        font-size: 1.5rem;
+      }
+
+      @media (max-width: 480px) {
+        font-size: 1.3rem;
+      }
     }
 
     .costs__heading {
@@ -17,6 +29,29 @@
       font-size: 25rem;
       text-align: center;
       margin-top: -11rem;
+
+      @media (max-width: 1400px) {
+        font-size: 22rem;
+        margin-top: -8rem;
+      }
+
+      @media (max-width: 1200px) {
+        font-size: 18rem;
+      }
+
+      @media (max-width: 992px) {
+        font-size: 16rem;
+      }
+
+      @media (max-width: 768px) {
+        font-size: 9rem;
+        margin-top: -3.5rem;
+      }
+
+      @media (max-width: 480px) {
+        font-size: 7rem;
+        margin-top: -3rem;
+      }
     }
 
     .costs__image {
@@ -25,10 +60,32 @@
       top: 15rem;
       max-width: 110%;
       height: auto;
+
+      @media (max-width: 1400px) {
+        top: 20rem;
+      }
+
+      @media (max-width: 1200px) {
+        top: 15rem;
+        z-index: 1;
+      }
+
+      @media (max-width: 768px) {
+        top: 12rem;
+      }
+
+      @media (max-width: 480px) {
+        top: 11rem;
+        max-width: 150%;
+      }
     }
 
     .costs__bottom-description {
       width: 55%;
+
+      @media (max-width: 768px) {
+        width: 100%;
+      }
     }
 
     .costs__bottom-buttons {
@@ -42,9 +99,28 @@
       align-items: start;
       margin-top: 18rem;
 
+      @media (max-width: 1200px) {
+        margin-top: 10rem;
+      }
+
+      @media (max-width: 480px) {
+        flex-direction: column;
+        justify-content: start;
+      }
+
+      &-left {
+        @media (max-width: 480px) {
+          order: 2;
+        }
+      }
+
       &-right {
         margin-top: -2rem;
 
+        @media (max-width: 480px) {
+          order: 1;
+          margin-top: 0;
+        }
         > div {
           display: flex;
           gap: 0.5rem;
@@ -57,16 +133,29 @@
               color: #c6c7cc;
               letter-spacing: 0.002em;
 
+              @media (max-width: 768px) {
+                font-size: 5rem;
+              }
+
               &:last-child {
                 display: flex;
                 flex-direction: column;
                 margin-top: 2.3rem;
 
+                @media (max-width: 768px) {
+                  margin-top: 1.7rem;
+                }
+
                 > span {
                   line-height: 1.2;
+                  display: block;
                   font-size: 2.5rem;
                   color: $color-text;
                   font-weight: 600;
+
+                  @media (max-width: 768px) {
+                    font-size: 1.8rem;
+                  }
                 }
               }
             }
@@ -76,6 +165,11 @@
             justify-content: end;
             margin-top: 2.5rem;
             font-size: 0.9rem;
+
+            @media (max-width: 768px) {
+              font-size: 0.8rem;
+              margin-top: 0rem;
+            }
           }
         }
       }
