--- a/src/styles/_section_ui.scss
+++ b/src/styles/_section_ui.scss
@@ -1,6 +1,26 @@
 section {
   position: relative;
   padding: 12rem 0;
+
+  @media (max-width: 1650px) {
+    padding: 10rem 3rem;
+  }
+
+  @media (max-width: 1400px) {
+    padding: 8rem 3rem;
+  }
+
+  @media (max-width: 1200px) {
+    padding: 7rem 3rem;
+  }
+
+  @media (max-width: 768px) {
+    padding: 5rem 2.5rem;
+  }
+
+  @media (max-width: 480px) {
+    padding: 4rem 2.5rem;
+  }
 }
 
 .section-title {
@@ -8,9 +28,25 @@ section {
   font-weight: 800;
   line-height: 1;
 
+  @media (max-width: 768px) {
+    font-size: 8rem;
+  }
+
+  @media (max-width: 480px) {
+    font-size: 6rem;
+  }
+
   > div {
     font-weight: 400;
     font-size: 6rem;
+
+    @media (max-width: 768px) {
+      font-size: 5rem;
+    }
+
+    @media (max-width: 480px) {
+      font-size: 3.7rem;
+    }
   }
 }
 
@@ -18,11 +54,28 @@ section {
   width: 54%;
   margin: 1.7rem 0;
   text-wrap: balance;
+
+  @media (max-width: 768px) {
+    width: 80%;
+  }
+
+  @media (max-width: 480px) {
+    width: 100%;
+  }
 }
 
 .section-bottom-title {
   font-weight: 500;
   font-size: 2.5rem;
+
+  @media (max-width: 768px) {
+    font-size: 2rem;
+    line-height: 1.3;
+  }
+
+  @media (max-width: 480px) {
+    font-size: 1.6rem;
+  }
 }
 
 .section-bottom-description {
@@ -30,4 +83,26 @@ section {
   font-size: 1.2rem;
   font-weight: 400;
   width: 40%;
+
+  @media (max-width: 1400px) {
+    width: 50%;
+  }
+
+  @media (max-width: 1200px) {
+    width: 55%;
+  }
+
+  @media (max-width: 992px) {
+    width: 65%;
+  }
+
+  @media (max-width: 768px) {
+    font-size: 1rem;
+    width: 90%;
+  }
+
+  @media (max-width: 480px) {
+    font-size: 0.8rem;
+    width: 100%;
+  }
 }
