--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -14,8 +14,12 @@
 html {
   font-size: 18px;
 
-  @media (max-width: 1400px) {
+  @media (max-width: 1920px) {
     font-size: 16px;
+  }
+
+  @media (max-width: 992px) {
+    font-size: 14px;
   }
 }
 
