--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -1,11 +1,13 @@
 @use 'variables' as *;
 
 .header {
-  position: sticky;
+  min-height: 5.5rem;
+  position: fixed;
+  width: 100%;
   top: 0;
   z-index: 100;
-  background: transparent;
-  transition: background-color 0.3s ease;
+  background: rgba(255, 255, 255, 0);
+  transition: background-color 0.3s ease, box-shadow 0.3s ease;
 
   &--scrolled {
     background: whitesmoke;
