--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -8,6 +8,8 @@
   z-index: 100;
   background: rgba(255, 255, 255, 0);
   transition: background-color 0.3s ease, box-shadow 0.3s ease;
+  -webkit-tap-highlight-color: transparent;
+  outline: none;
 
   &--scrolled {
     background: whitesmoke;
