--- a/src/styles/_loyalty.scss
+++ b/src/styles/_loyalty.scss
@@ -16,14 +16,29 @@
 
     .loyalty__plane {
       position: absolute;
-      left: -28rem;
+      left: -40rem;
       top: 24rem;
       max-width: 130%;
       height: auto;
 
+      @media (max-width: 1400px) {
+        top: 20rem;
+        left: -35rem;
+      }
+
       @media (max-width: 1200px) {
+        left: -35rem;
+        top: 18rem;
+      }
+
+      @media (max-width: 800px) {
+        left: -25rem;
         top: 15rem;
-        left: -8rem;
+      }
+
+      @media (max-width: 600px) {
+        left: -20rem;
+        top: 15rem;
       }
     }
 
