--- a/src/styles/_section_ui.scss
+++ b/src/styles/_section_ui.scss
@@ -1,6 +1,6 @@
 section {
   position: relative;
-  padding: 12rem 0;
+  padding: 10rem 0;
 
   @media (max-width: 1650px) {
     padding: 10rem 3rem;
@@ -24,6 +24,8 @@ section {
 }
 
 .section-title {
+  display: flex;
+  flex-direction: column;
   font-size: 9.5rem;
   font-weight: 800;
   line-height: 1;
@@ -36,7 +38,7 @@ section {
     font-size: 6rem;
   }
 
-  > div {
+  &__highlight {
     font-weight: 400;
     font-size: 6rem;
 
