--- a/src/styles/_welcome.scss
+++ b/src/styles/_welcome.scss
@@ -123,7 +123,9 @@
 
       &.main-cloud {
         top: 4rem;
-        left: 49%;
+        left: 48%;
+        width: 60vw;
+        max-width: 1200px;
         transform: translateX(-50%);
 
         @media (max-width: 1200px) {
